--- a/stretch-assignment/digital_timer/index.html
+++ b/stretch-assignment/digital_timer/index.html
@@ -12,5 +12,7 @@
       <div class="digit" id="msHundreds">-</div>
       <div class="digit" id="msTens">-</div>
     </div>
+    <button class="start-button">START</button>
   </body>
+  <script src="./index.js"></script>
 </html>
